SI PCAP Preparation Summary: Google Colaboratory

--- a/PCAP_Preparation_Summary_SI_ipynb.ipynb
+++ b/PCAP_Preparation_Summary_SI_ipynb.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "PCAP_Preparation_Summary_SI.ipynb.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPCaBviignbehNqqWisSsDj",
+      "authorship_tag": "ABX9TyM2j1vCCslKUCLP4buXTB7F",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -33,13 +33,14 @@
       "source": [
         "Q1. What is the output of the following snippet?\n",
         "\n",
+        "```\n",
         "l1 = [1,2]\n",
-        "\n",
         "for v in range(2):\n",
-        "\n",
         "   l1.insert(-1,l1[v])\n",
-        "\n",
         "print(l1)\n",
+        "```\n",
+        "\n",
+        "\n",
         "\n",
         "1. [1, 2, 2, 2]\n",
         "2. **[1, 1, 1, 2]**\n",
@@ -99,10 +100,10 @@
       "source": [
         "Q3. Which of the following sentences are true? Choose all that apply.\n",
         "\n",
+        "```\n",
         "nums = [1,2,3]\n",
-        "\n",
         "vals = nums\n",
-        "\n",
+        "```\n",
         "1. vals is longer than nums\n",
         "2. nums is longer than vals\n",
         "3. **nums and vals are different names of the same list**\n",
@@ -132,12 +133,13 @@
           "base_uri": "https://localhost:8080/",
           "height": 34
         },
-        "outputId": "4e1741e1-43a4-4731-c452-8f8aa6f6922a"
+        "outputId": "3ac24dc7-2ce2-4a96-aca1-6a335d022502"
       },
       "source": [
+        "# Length of nums\n",
         "len(nums)"
       ],
-      "execution_count": 5,
+      "execution_count": 29,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -149,7 +151,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 5
+          "execution_count": 29
         }
       ]
     },
@@ -162,12 +164,13 @@
           "base_uri": "https://localhost:8080/",
           "height": 34
         },
-        "outputId": "500283f3-2dc3-4859-c9d1-04d6ba466133"
+        "outputId": "5732550d-3b03-4b60-fe4d-fb6f6e9088ad"
       },
       "source": [
+        "# Length of vals\n",
         "len(vals)"
       ],
-      "execution_count": 6,
+      "execution_count": 30,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -179,7 +182,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 6
+          "execution_count": 30
         }
       ]
     },
@@ -206,12 +209,12 @@
           "base_uri": "https://localhost:8080/",
           "height": 34
         },
-        "outputId": "218fba84-033b-4074-e257-70bea0721c56"
+        "outputId": "81e135dc-1b5a-4bed-d114-1f551218a951"
       },
       "source": [
         "print(nums, vals)"
       ],
-      "execution_count": 8,
+      "execution_count": 32,
       "outputs": [
         {
           "output_type": "stream",
@@ -272,16 +275,13 @@
       "source": [
         "Q5. The following snippet:\n",
         "\n",
+        "```\n",
         "def func1(a):\n",
-        "\n",
         "  return None\n",
-        "\n",
         "def func2(a):\n",
-        "\n",
         "  return func1(a)*func1(a)\n",
-        "\n",
         "print(func2(2))\n",
-        "\n",
+        "```\n",
         "1. will output 2\n",
         "2. **will cause a runtime error**\n",
         "3. will output 4\n",
@@ -333,8 +333,7 @@
       "source": [
         "Q6. The result of the following division:\n",
         "\n",
-        "1 // 2\n",
-        "\n",
+        "`1 // 2`\n",
         "1. cannot be predicted\n",
         "2. is equal to 0.5\n",
         "3. is equal to 0.0\n",
@@ -374,13 +373,12 @@
       },
       "source": [
         "Q7. The following snippet:\n",
-        "   \n",
-        "def func(a,b):\n",
-        "  \n",
+        "\n",
+        "```\n",
+        "def func(a,b):  \n",
         "  return b ** a\n",
-        "\n",
         "print(func(b=2,2))\n",
-        "\n",
+        "```\n",
         "1. will output 4\n",
         "2. **is erroneous**\n",
         "3. will return None\n",
@@ -427,11 +425,13 @@
       "source": [
         "Q8. What value will be assigned to the x variable?\n",
         "\n",
+        "```\n",
         "z = 0\n",
-        "\n",
         "y = 10\n",
-        "\n",
         "x = y < z and z > y or y > z and z < y\n",
+        "```\n",
+        "\n",
+        "\n",
         "\n",
         "1. 0\n",
         "2. False\n",
@@ -518,16 +518,17 @@
       },
       "source": [
         "Q10. What is the output of the following snippet?\n",
-        "    \n",
+        "\n",
+        "```\n",
         "list =  [x*x for x in range(5)]\n",
-        "\n",
         "def fun(L):\n",
-        "\n",
         "  del L[L[2]]\n",
-        "\n",
         "  return L\n",
         "    \n",
         "print(fun(list))\n",
+        "```\n",
+        "\n",
+        "\n",
         "\n",
         "1. [0, 1, 4, 16]\n",
         "2. [1, 4, 9, 16]\n",
@@ -560,6 +561,382 @@
           "output_type": "stream",
           "text": [
             "[0, 1, 4, 9]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "Weg5b6ASyOw7",
+        "colab_type": "text"
+      },
+      "source": [
+        "Q11. What is the output of the following piece of code?\n",
+        "\n",
+        "```\n",
+        "x=1\n",
+        "y=2\n",
+        "\n",
+        "x, y, z = x, x, y\n",
+        "z, y, z = x, y, z\n",
+        "\n",
+        "print(x,y,z)\n",
+        "```\n",
+        "1. 1 1 2\n",
+        "2. 1 2 2\n",
+        "3. 2 1 2\n",
+        "4. 1 2 1"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "GJ8fpkmfyaOK",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "3baded56-3ff2-448b-fea3-3cd504a0f79a"
+      },
+      "source": [
+        "x=1\n",
+        "y=2\n",
+        "\n",
+        "x, y, z = x, x, y\n",
+        "z, y, z = x, y, z\n",
+        "\n",
+        "print(x,y,z)"
+      ],
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "1 1 2\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "99fNyiP10zxQ",
+        "colab_type": "text"
+      },
+      "source": [
+        "Here, the expression on the Right Hand Side of the Equal is evaluated first, and in this case builds a tuple, and then the assignment operator unpacks the tuple."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "sLYbY3xz1YoQ",
+        "colab_type": "text"
+      },
+      "source": [
+        "Q12. What will the output of the following snippet?\n",
+        "\n",
+        "    a = 1\n",
+        "\n",
+        "    b = 0\n",
+        "\n",
+        "    a = a ^ b\n",
+        "\n",
+        "    b = a ^ b\n",
+        "\n",
+        "    a = a ^ b\n",
+        "\n",
+        "    print(a,b)\n",
+        "\n",
+        "1. 0 1\n",
+        "2. 1 0\n",
+        "3. 0 0\n",
+        "4. 1 1"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "BmcNWzxL1oji",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "dbb51e4a-0c8c-4dd1-c54e-0c5ad7eea45b"
+      },
+      "source": [
+        "# Executing the below code to test the bitwise operator\n",
+        "a = 1\n",
+        "b = 0\n",
+        "a = a ^ b\n",
+        "b = a ^ b\n",
+        "a = a ^ b\n",
+        "\n",
+        "print(a,b)"
+      ],
+      "execution_count": 33,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "0 1\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "T5VaRhqy3n0q",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 85
+        },
+        "outputId": "3ace7e81-f5a0-4be2-f27a-d3b31775b82e"
+      },
+      "source": [
+        "# ^ is the Bitwise Exclusive Or\t\n",
+        "# a ^ b\txor(a, b)\n",
+        "print(\"0 ^ 0 = \", 0 ^ 0)\n",
+        "print(\"1 ^ 0 = \", 1 ^ 0)\n",
+        "print(\"0 ^ 1 = \", 0 ^ 1)\n",
+        "print(\"1 ^ 1 = \", 1 ^ 1)"
+      ],
+      "execution_count": 25,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "0 ^ 0 =  0\n",
+            "1 ^ 0 =  1\n",
+            "0 ^ 1 =  1\n",
+            "1 ^ 1 =  0\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "qKP7lgGY49_K",
+        "colab_type": "text"
+      },
+      "source": [
+        "Q13. What is the output of the following snippet?\n",
+        "\n",
+        "```\n",
+        "def fun(x):\n",
+        "  if x % 2 == 0:\n",
+        "    return 1\n",
+        "  else:\n",
+        "    return 2\n",
+        "print(fun(fun(2)))\n",
+        "```\n",
+        "\n",
+        "\n",
+        "1. None\n",
+        "2. 1\n",
+        "3. the code will cause a runtime error\n",
+        "4. **2**"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "d1B1P0fU6ncS",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "96427f2a-ebd9-4bac-d7f2-894d604c4927"
+      },
+      "source": [
+        "def fun(x):\n",
+        "  if x % 2 == 0:\n",
+        "    return 1\n",
+        "  else:\n",
+        "    return 2\n",
+        "print(fun(fun(2)))"
+      ],
+      "execution_count": 34,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "2\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "vGyrpslI7CXi",
+        "colab_type": "text"
+      },
+      "source": [
+        "Q14. Take a look at the snippet and choose the true statement:\n",
+        "\n",
+        "```\n",
+        "nums = [1,2,3]\n",
+        "vals = nums\n",
+        "del vals[:]\n",
+        "```\n",
+        "1. **nums and vals are different names of the same list**\n",
+        "2. vals is longer than nums\n",
+        "3. the snippet will cause a runtime error\n",
+        "4. nums and vals are different lists"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Q_Hzq7HH7YFi",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "# Executing the below source code\n",
+        "nums = [1,2,3]\n",
+        "vals = nums\n",
+        "del vals[:]"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "asv2m2uW7dfA",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "9f309538-1fee-421f-c085-39b66476f89c"
+      },
+      "source": [
+        "print(nums, vals)"
+      ],
+      "execution_count": 36,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "[] []\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "v5u4jaz17iDO",
+        "colab_type": "text"
+      },
+      "source": [
+        "Q15. What is the output of the following piece of code if the user enters two lines containing 3 and 2 respectively?\n",
+        "\n",
+        "```\n",
+        "x=int(input())\n",
+        "y=int(input())\n",
+        "x = x % y\n",
+        "x = x % y\n",
+        "y = y % x\n",
+        "print(y)\n",
+        "```\n",
+        "1. 2\n",
+        "2. 1\n",
+        "3. **0**\n",
+        "4. 3"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "0z_8PSdv76VS",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 68
+        },
+        "outputId": "cc60c529-7184-44f7-b89a-205c92f1d333"
+      },
+      "source": [
+        "x=int(input())\n",
+        "y=int(input())\n",
+        "x = x % y\n",
+        "x = x % y\n",
+        "y = y % x\n",
+        "print(y)"
+      ],
+      "execution_count": 37,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "3\n",
+            "2\n",
+            "0\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "ivBm4fQ578j4",
+        "colab_type": "text"
+      },
+      "source": [
+        "Q16. What is the output of the following piece of code if the user enters two lines containing 3 and 6 respectively?\n",
+        "```\n",
+        "y=input()\n",
+        "x=input()\n",
+        "print(x+y)\n",
+        "```\n",
+        "1. 6\n",
+        "2. 3\n",
+        "3. 36\n",
+        "4. **63**"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "pHxoaPjz8TRh",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 68
+        },
+        "outputId": "ff4a6c6a-5d4c-4616-9c46-6998bb3969d1"
+      },
+      "source": [
+        "y=input()\n",
+        "x=input()\n",
+        "print(x+y)"
+      ],
+      "execution_count": 40,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "3\n",
+            "6\n",
+            "63\n"
           ],
           "name": "stdout"
         }
