SI PCAP Preparation Summary: Google Colaboratory

--- a/PCAP_Preparation_Summary_SI_ipynb.ipynb
+++ b/PCAP_Preparation_Summary_SI_ipynb.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "PCAP_Preparation_Summary_SI.ipynb.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyM2j1vCCslKUCLP4buXTB7F",
+      "authorship_tag": "ABX9TyOs54zcxedIOi8fXe90IlLb",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -937,6 +937,273 @@
             "3\n",
             "6\n",
             "63\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "jnUCyTZ08uga",
+        "colab_type": "text"
+      },
+      "source": [
+        "Q17. What is the output of the following piece of code?\n",
+        "```\n",
+        "print(“a”,”b”,”c”,sep=”sep”)\n",
+        "```\n",
+        "1. abc\n",
+        "2. asepbsepcsep\n",
+        "3. **asepbsepc**\n",
+        "4. a b c"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "CcAuA_qR9AAg",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "4a39b99a-8354-49e8-b140-3eb6056bd8cb"
+      },
+      "source": [
+        "print('a','b','c',sep='sep')"
+      ],
+      "execution_count": 42,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "asepbsepc\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "Wgaq4pSm9IeX",
+        "colab_type": "text"
+      },
+      "source": [
+        "Q18. What is the output of the following piece of code?\n",
+        "```\n",
+        "X = 1 // 5 + 1 / 5\n",
+        "print(X)\n",
+        "```\n",
+        "1. 0.4\n",
+        "2. 0.0\n",
+        "3. **0.2**\n",
+        "4. 0"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "zbNMnws29S1R",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "04f7f55e-21e1-4a76-92fc-aecc5823d380"
+      },
+      "source": [
+        "X = 1 // 5 + 1 / 5\n",
+        "print(X)"
+      ],
+      "execution_count": 43,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "0.2\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "FEEf7VHF9aMY",
+        "colab_type": "text"
+      },
+      "source": [
+        "Q19. Assuming that the tuple is a correctly created tuple, the fact that tuples are immutable means that the following instruction:\n",
+        "```\n",
+        "tuple[1] = tuple[1] + tuple[0]\n",
+        "```\n",
+        "1. is fully correct\n",
+        "2. **is illegal**\n",
+        "3. may be illegal if the tuple contains strings\n",
+        "4. can be executed if and only if the tuple contains at least two elements"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "MV2eeBjM9pfS",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 180
+        },
+        "outputId": "2d3a0b0f-f94c-4410-a612-66482a170f96"
+      },
+      "source": [
+        "# The code returns a TypeError: 'tuple' object does not support item assignment\n",
+        "tuple = (1, 2, 3)\n",
+        "tuple[1] = tuple[1] + tuple[0]"
+      ],
+      "execution_count": 44,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "TypeError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-44-e3066a90c1d0>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mtuple\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m2\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m3\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mtuple\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtuple\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mtuple\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;31mTypeError\u001b[0m: 'tuple' object does not support item assignment"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "5VrBScC69yMG",
+        "colab_type": "text"
+      },
+      "source": [
+        "Q20. What is the output of the following piece of code if the user enters two lines containing 2 and 4 respectively?\n",
+        "```\n",
+        "x=float(input())\n",
+        "y=float(input())\n",
+        "print(y ** (1/x))\n",
+        "```\n",
+        "1. 4.0\n",
+        "2. **2.0**\n",
+        "3. 1.0\n",
+        "4. 0.0"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "n_MSDg0p-DLS",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 68
+        },
+        "outputId": "6eaba926-5079-4969-b1d1-fbb193751d79"
+      },
+      "source": [
+        "x=float(input())\n",
+        "y=float(input())\n",
+        "print(y ** (1/x))"
+      ],
+      "execution_count": 45,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "2\n",
+            "4\n",
+            "2.0\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "tHiz_Os_-F8C",
+        "colab_type": "text"
+      },
+      "source": [
+        "Q21. What is the output of the following snippet?\n",
+        "```\n",
+        "dct = { ‘one’:’two’, ‘three’:’one’, ‘two’:’three’ }\n",
+        "v = dct[‘three’]\n",
+        "for k in range(len(dct)):\n",
+        "  v = dct[v]\n",
+        "print(v)\n",
+        "```\n",
+        "1. two\n",
+        "2. three\n",
+        "3. **one**\n",
+        "4. (‘one’, ‘two’, ‘three’)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "GkI1yOAR-Tc5",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "3eb4a48f-40a0-4cdf-f3ef-a23fb7255163"
+      },
+      "source": [
+        "dct = {'one':'two', 'three':'one', 'two':'three'}\n",
+        "v = dct['three']\n",
+        "for k in range(len(dct)):\n",
+        "  v = dct[v]\n",
+        "print(v)"
+      ],
+      "execution_count": 47,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "one\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Lo1-3-nL-2zb",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 102
+        },
+        "outputId": "362a5bda-0c08-41b0-fb11-8ffeba43029a"
+      },
+      "source": [
+        "dct = {'one':'two', 'three':'one', 'two':'three'}\n",
+        "v = dct['three']\n",
+        "print(\"Initial v:\",v)\n",
+        "for k in range(len(dct)):\n",
+        "  v = dct[v]\n",
+        "  print(k, \"v:\", v)\n",
+        "print(\"Final v:\",v)"
+      ],
+      "execution_count": 53,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Initial v: one\n",
+            "0 v: two\n",
+            "1 v: three\n",
+            "2 v: one\n",
+            "Final v: one\n"
           ],
           "name": "stdout"
         }
