--- a/PCAP_Preparation_Summary_SI_ipynb.ipynb
+++ b/PCAP_Preparation_Summary_SI_ipynb.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "PCAP_Preparation_Summary_SI.ipynb.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOs54zcxedIOi8fXe90IlLb",
+      "authorship_tag": "ABX9TyMFOKdJ+RLfb4QeD6JNKI1n",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1148,35 +1148,6 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "GkI1yOAR-Tc5",
-        "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 34
-        },
-        "outputId": "3eb4a48f-40a0-4cdf-f3ef-a23fb7255163"
-      },
-      "source": [
-        "dct = {'one':'two', 'three':'one', 'two':'three'}\n",
-        "v = dct['three']\n",
-        "for k in range(len(dct)):\n",
-        "  v = dct[v]\n",
-        "print(v)"
-      ],
-      "execution_count": 47,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "one\n"
-          ],
-          "name": "stdout"
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
         "id": "Lo1-3-nL-2zb",
         "colab_type": "code",
         "colab": {
@@ -1204,6 +1175,491 @@
             "1 v: three\n",
             "2 v: one\n",
             "Final v: one\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "Zd4bpFq3_tSo",
+        "colab_type": "text"
+      },
+      "source": [
+        "Q22. How many elements does the L list contain?\n",
+        "```\n",
+        "L = [i for i in range(-1,-2)]\n",
+        "```\n",
+        "1. 1\n",
+        "2. 2\n",
+        "3. **0**\n",
+        "4. 3"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "bS0ZntP5_4TA",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "7d137004-953b-408f-ba04-4c85fc535cac"
+      },
+      "source": [
+        "L = [i for i in range(-1,-2)]\n",
+        "print(L)"
+      ],
+      "execution_count": 55,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "[]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "-4V1ebjjCtsy",
+        "colab_type": "text"
+      },
+      "source": [
+        "Q23. Which of the following lines improperly invokes the function defined as:\n",
+        "```\n",
+        "**def fun(a,b,c=0)**\n",
+        "```\n",
+        "Choose all that apply.\n",
+        "1. **fun(b=1)**:\n",
+        "2. fun(a=1,b=0,c=0):\n",
+        "3. fun(a=0,b=0):\n",
+        "4. fun(0,1,2):"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "qCrRNkNmDgmr",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "def fun(a,b,c=0):\n",
+        "  return True"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "PpzVEGeGEEHL",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 180
+        },
+        "outputId": "a340df82-3bbd-4a3d-bcfc-3ada3bda2294"
+      },
+      "source": [
+        "a = fun(b=1)\n",
+        "print(a)"
+      ],
+      "execution_count": 62,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "TypeError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-62-f8ae5f11e337>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0ma\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mfun\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mb\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0ma\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mTypeError\u001b[0m: fun() missing 1 required positional argument: 'a'"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "sbXBwUioEIng",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "4ec3e1d3-60bc-432e-a20e-78bed68cb870"
+      },
+      "source": [
+        "a = fun(a=1,b=0,c=0)\n",
+        "print(a)"
+      ],
+      "execution_count": 61,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "True\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "CebViZaZETHh",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "9ca7b107-7029-4c54-bafb-da03805f8890"
+      },
+      "source": [
+        "a = fun(a=0,b=0)\n",
+        "print(a)"
+      ],
+      "execution_count": 63,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "True\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Wm8bJDniEXIY",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "461d2702-9a19-4b67-a664-5a9e5739f787"
+      },
+      "source": [
+        "a = fun(0,1,2)\n",
+        "print(a)"
+      ],
+      "execution_count": 64,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "True\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "VllQgh9uEdMG",
+        "colab_type": "text"
+      },
+      "source": [
+        "Q24. What is the output of the following snippet?\n",
+        "\n",
+        "```\n",
+        "def fun(x,y):\n",
+        "  if x == y:\n",
+        "    return x\n",
+        "  else:\n",
+        "    return fun(x,y-1)\n",
+        "print(fun(0,3))\n",
+        "```\n",
+        "1. **0**\n",
+        "2. 1\n",
+        "3. the snippet will cause a runtime error\n",
+        "4. 2"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "vyU9pnswEpMK",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "77e1bc27-0aa9-420e-ab4a-15d5ec2ad19d"
+      },
+      "source": [
+        "def fun(x,y):\n",
+        "  if x == y:\n",
+        "    return x\n",
+        "  else:\n",
+        "    return fun(x,y-1)\n",
+        "print(fun(0,3))"
+      ],
+      "execution_count": 65,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "0\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "Gfa0Uf1FJXl4",
+        "colab_type": "text"
+      },
+      "source": [
+        "Q25. How many stars will the following snippet send to the console?\n",
+        "\n",
+        "```\n",
+        "i = 0\n",
+        "while i < i + 2:\n",
+        "  i += 1\n",
+        "  print(“*”)\n",
+        "else:\n",
+        "  print(“*”)\n",
+        "```\n",
+        "1. **the snippet will enter an infinite loop**\n",
+        "2. zero\n",
+        "3. one\n",
+        "4. two"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "ComdPkZYJ0F9",
+        "colab_type": "text"
+      },
+      "source": [
+        "Q26. What is the output of the following snippet?\n",
+        "```\n",
+        "tup = (1, 2, 4, 8)\n",
+        "tup = tup[-2:-1]\n",
+        "tup = tup[-1]\n",
+        "print(tup)\n",
+        "```\n",
+        "1. **4**\n",
+        "2. (4)\n",
+        "3. 44\n",
+        "4. (4,)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "ShFlqSQjKZAi",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "808e79b0-ce0c-49a5-80cf-b93206a48f76"
+      },
+      "source": [
+        "tup = (1, 2, 4, 8)\n",
+        "tup = tup[-2:-1]\n",
+        "tup = tup[-1]\n",
+        "print(tup)"
+      ],
+      "execution_count": 66,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "4\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "UGqYVjO5KaCL",
+        "colab_type": "text"
+      },
+      "source": [
+        "Q27. What is the output of the following snippet?\n",
+        "```\n",
+        "dd = { “1”:”0″, “0”:”1″ }\n",
+        "for x in dd.vals():\n",
+        "  print(x,end=””)\n",
+        "```\n",
+        "1. 1 0\n",
+        "2. **the code is erroneous**\n",
+        "3. 0 0\n",
+        "4. 0 1"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "a-LDP5RsKlew",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 197
+        },
+        "outputId": "02711845-d56f-48a8-8147-0417d88fd4c6"
+      },
+      "source": [
+        "# The code returns AttributeError: 'dict' object has no attribute 'vals'\n",
+        "dd = {'1':'0', '0':'1'}\n",
+        "for x in dd.vals():\n",
+        "  print(x,end='')"
+      ],
+      "execution_count": 70,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "AttributeError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-70-eb31caa1f0ca>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mdd\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m{\u001b[0m\u001b[0;34m'1'\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m'0'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'0'\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m'1'\u001b[0m\u001b[0;34m}\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0;32mfor\u001b[0m \u001b[0mx\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mdd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mvals\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m   \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mend\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m''\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mAttributeError\u001b[0m: 'dict' object has no attribute 'vals'"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "vdl79ThCK32U",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "7d6afa64-a6db-42f3-ea75-e56b65e5ff6f"
+      },
+      "source": [
+        "# The above code is fixed with the correct dictionary method .values()\n",
+        "dd = {'1':'0', '0':'1'}\n",
+        "for x in dd.values():\n",
+        "  print(x,end='')"
+      ],
+      "execution_count": 71,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "01"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "2o204ZLKLMbu",
+        "colab_type": "text"
+      },
+      "source": [
+        "Q28. What is the output of the following snippet?\n",
+        "```\n",
+        "dct = {}\n",
+        "dct['1'] = (1,2)\n",
+        "dct['2'] = (2,1)\n",
+        "for x in dct.keys():\n",
+        "  print(dct[x][1],end='')\n",
+        "```\n",
+        "1. **21**\n",
+        "2. (1,2)\n",
+        "3. (2,1)\n",
+        "4. 12"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "P3jYwvGtLcBK",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 51
+        },
+        "outputId": "e8e2c255-e859-490f-82d0-d2c3ff5a722a"
+      },
+      "source": [
+        "dct = {}\n",
+        "dct['1'] = (1,2)\n",
+        "dct['2'] = (2,1)\n",
+        "# Dispay the dictonary dct\n",
+        "print(\"dct =\", dct)\n",
+        "for x in dct.keys():\n",
+        "  print(dct[x][1],end='')"
+      ],
+      "execution_count": 75,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "dct = {'1': (1, 2), '2': (2, 1)}\n",
+            "21"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "Qj7CI91lL-cL",
+        "colab_type": "text"
+      },
+      "source": [
+        "Q29. What is the output of the following snippet?\n",
+        "```\n",
+        "def fun(inp=2,out=3):\n",
+        "  return inp * out\n",
+        "print(fun(out=2))\n",
+        "```\n",
+        "1. 2\n",
+        "2. the snippet is erroneous\n",
+        "3. 6\n",
+        "4. **4**"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "eJWA4LFWMKSJ",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "95ed2b13-e8cd-4a2f-c0a8-c7ad6426adea"
+      },
+      "source": [
+        "def fun(inp=2,out=3):\n",
+        "  return inp * out\n",
+        "print(fun(out=2))"
+      ],
+      "execution_count": 76,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "4\n"
           ],
           "name": "stdout"
         }
