--- a/PCAP_Preparation_Summary_SI_ipynb.ipynb
+++ b/PCAP_Preparation_Summary_SI_ipynb.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "PCAP_Preparation_Summary_SI.ipynb.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMFOKdJ+RLfb4QeD6JNKI1n",
+      "authorship_tag": "ABX9TyOCMZc3wRgsvdpZ/DMDRrzq",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1660,6 +1660,58 @@
           "output_type": "stream",
           "text": [
             "4\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "30AcTGsVMiVp",
+        "colab_type": "text"
+      },
+      "source": [
+        "Q30. How many hashes will the following snippet send to the console?\n",
+        "```\n",
+        "lst = [[x for x in range(3)] for y in range(3)]\n",
+        "for r in range(3):\n",
+        "  for c in range(3):\n",
+        "    if lst[r][c] % 2 != 0:\n",
+        "      print(“#”)\n",
+        "```\n",
+        "1. zero\n",
+        "2. **three**\n",
+        "3. nine\n",
+        "4. six"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "j-EcUviyMz1C",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 68
+        },
+        "outputId": "80342c2c-243c-4c91-effe-d073e3da705d"
+      },
+      "source": [
+        "lst = [[x for x in range(3)] for y in range(3)]\n",
+        "for r in range(3):\n",
+        "  for c in range(3):\n",
+        "    if lst[r][c] % 2 != 0:\n",
+        "      print('#')"
+      ],
+      "execution_count": 78,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "#\n",
+            "#\n",
+            "#\n"
           ],
           "name": "stdout"
         }
