PCAP Preparation Summary Final: Google Colaboratory

--- a/PCAP_Preparation_Summary_Final.ipynb
+++ b/PCAP_Preparation_Summary_Final.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "PCAP_Preparation_Summary_Final.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOhlDr69MvHuAlrhSVYnugo",
+      "authorship_tag": "ABX9TyMHaoVy3bbp7lDKYnvKVkZy",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -94,11 +94,11 @@
       "metadata": {
         "id": "jKRIvLWm8jSa",
         "colab_type": "code",
+        "outputId": "02ce5135-c1fd-48d4-d09a-64ca8a52c8c9",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 129
-        },
-        "outputId": "02ce5135-c1fd-48d4-d09a-64ca8a52c8c9"
+        }
       },
       "source": [
         "# Returns SyntaxError: positional argument follows keyword argument\n",
@@ -106,7 +106,7 @@
         "  return par2 + par1\n",
         "print(f(par2=1,2))"
       ],
-      "execution_count": 13,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "error",
@@ -142,11 +142,11 @@
       "metadata": {
         "id": "TcoH2-gX9DRz",
         "colab_type": "code",
+        "outputId": "c11877ca-2aa8-4e48-9403-6eb77bc93676",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "c11877ca-2aa8-4e48-9403-6eb77bc93676"
+        }
       },
       "source": [
         "z = 2\n",
@@ -154,7 +154,7 @@
         "x = y < z or z > y and y > z or z < y\n",
         "print(x)"
       ],
-      "execution_count": 16,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -191,11 +191,11 @@
       "metadata": {
         "id": "DkwGtugAAPRy",
         "colab_type": "code",
+        "outputId": "5df263da-ffed-4b47-d7bf-3d0054945322",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 316
-        },
-        "outputId": "5df263da-ffed-4b47-d7bf-3d0054945322"
+        }
       },
       "source": [
         "# Returns TypeError: 'str' object doesn't support item deletion\n",
@@ -205,7 +205,7 @@
         "  return s\n",
         "print(fun(str))"
       ],
-      "execution_count": 18,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "error",
@@ -245,18 +245,18 @@
       "metadata": {
         "id": "Urv99do6BPlK",
         "colab_type": "code",
+        "outputId": "c109e9c9-687a-4a3d-954f-cf1f859d14c2",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "c109e9c9-687a-4a3d-954f-cf1f859d14c2"
+        }
       },
       "source": [
         "x, y, z = 3, 2, 1\n",
         "z, y, x = x, y, z\n",
         "print(x,y,z)"
       ],
-      "execution_count": 19,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -294,11 +294,11 @@
       "metadata": {
         "id": "s1hM2xkoByDS",
         "colab_type": "code",
+        "outputId": "c18412f8-c586-4e55-c227-1cd7f70df755",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "c18412f8-c586-4e55-c227-1cd7f70df755"
+        }
       },
       "source": [
         "a = True\n",
@@ -308,7 +308,7 @@
         "a = a or b\n",
         "print(a,b)"
       ],
-      "execution_count": 20,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -343,18 +343,18 @@
       "metadata": {
         "id": "Z_Mm85aiCGdC",
         "colab_type": "code",
+        "outputId": "7031d382-987b-4300-d52d-78b1b4e8d58a",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "7031d382-987b-4300-d52d-78b1b4e8d58a"
+        }
       },
       "source": [
         "def fun(x):\n",
         "  return 1 if x % 2 != 0 else 2\n",
         "print(fun(fun(1)))"
       ],
-      "execution_count": 21,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -387,16 +387,16 @@
       "metadata": {
         "id": "e32O3NZ0Hvxr",
         "colab_type": "code",
+        "outputId": "15cdbe36-a254-41ad-e798-a96cadde81ea",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "15cdbe36-a254-41ad-e798-a96cadde81ea"
+        }
       },
       "source": [
         "print(len((1,)))"
       ],
-      "execution_count": 22,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -433,11 +433,11 @@
       "metadata": {
         "id": "9ervyX_VIJj6",
         "colab_type": "code",
+        "outputId": "0558cc8a-ab79-4e28-bb89-4165f95e0c19",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "0558cc8a-ab79-4e28-bb89-4165f95e0c19"
+        }
       },
       "source": [
         "d = { 1:0, 2:1, 3:2, 0:1 }\n",
@@ -446,7 +446,7 @@
         "  x = d[x]\n",
         "print(x)"
       ],
-      "execution_count": 27,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -482,18 +482,18 @@
       "metadata": {
         "id": "xdheBLO5JRki",
         "colab_type": "code",
+        "outputId": "edb0d7ae-d644-45f6-bb07-f00a72f3efe2",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 68
-        },
-        "outputId": "edb0d7ae-d644-45f6-bb07-f00a72f3efe2"
+        }
       },
       "source": [
         "y=input()\n",
         "x=input()\n",
         "print(x+y)"
       ],
-      "execution_count": 28,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -528,16 +528,16 @@
       "metadata": {
         "id": "5MBlwOPaJrOi",
         "colab_type": "code",
+        "outputId": "35ffd5d1-65af-4756-f3b4-c0bf539795fe",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "35ffd5d1-65af-4756-f3b4-c0bf539795fe"
+        }
       },
       "source": [
         "print('a','b','c',sep=\"'\")"
       ],
-      "execution_count": 30,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -571,17 +571,17 @@
       "metadata": {
         "id": "-yjGFmsaKQ3R",
         "colab_type": "code",
+        "outputId": "5db8871e-b048-4d8e-86e4-f5b1ee7ecbc0",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "5db8871e-b048-4d8e-86e4-f5b1ee7ecbc0"
+        }
       },
       "source": [
         "v = 1 + 1 // 2 + 1 / 2 + 2\n",
         "print(v)"
       ],
-      "execution_count": 31,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -616,18 +616,18 @@
       "metadata": {
         "id": "2LbZkUY1LHtJ",
         "colab_type": "code",
+        "outputId": "023e5eb7-269c-4168-ff7e-00a54a5ae9c5",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "023e5eb7-269c-4168-ff7e-00a54a5ae9c5"
+        }
       },
       "source": [
         "t = (1,)\n",
         "t = t[0] + t[0]\n",
         "print(t)"
       ],
-      "execution_count": 32,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -663,11 +663,11 @@
       "metadata": {
         "id": "u2-Pih1bLrsz",
         "colab_type": "code",
+        "outputId": "375e8946-242f-42eb-e12d-7d843aa635f9",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "375e8946-242f-42eb-e12d-7d843aa635f9"
+        }
       },
       "source": [
         "x = 16\n",
@@ -675,7 +675,7 @@
         "  print('*',end='')\n",
         "  x //= 2"
       ],
-      "execution_count": 34,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -710,18 +710,18 @@
       "metadata": {
         "id": "UzVUx1fHMm7u",
         "colab_type": "code",
+        "outputId": "b52d3d9a-6899-46c0-c13b-0fc181afb47d",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "b52d3d9a-6899-46c0-c13b-0fc181afb47d"
+        }
       },
       "source": [
         "d = { 'one':1, 'three':3, 'two':2 }\n",
         "for k in sorted(d.values()):\n",
         "  print(k,end=' ')"
       ],
-      "execution_count": 36,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -754,21 +754,111 @@
       "metadata": {
         "id": "jbsUX3fyNAEB",
         "colab_type": "code",
+        "outputId": "69ddafa8-e965-45e1-c687-de0135395b0d",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "69ddafa8-e965-45e1-c687-de0135395b0d"
+        }
       },
       "source": [
         "print(len([i for i in range(0,-2)]))"
       ],
-      "execution_count": 37,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "0\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "7NfgGSfHN6Ue",
+        "colab_type": "text"
+      },
+      "source": [
+        "Q19. Which of the following lines properly invokes the function defined as:\n",
+        "```\n",
+        "def fun(a,b,c=0)\n",
+        "```\n",
+        "1. fun(0):\n",
+        "2. fun(b=0,b=0):\n",
+        "3. fun(1,c=2):\n",
+        "4. **fun(a=1,b=0,c=0):**"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "LgpY1pEtLhBP",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "9b0fcdca-550e-4e29-ef15-18538f74f59f"
+      },
+      "source": [
+        "def fun(a,b,c=0):\n",
+        "  return print(\"Function Invoked!\")\n",
+        "fun(a=1,b=0,c=0)"
+      ],
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Function Invoked!\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "Qur1aT9NLpJt",
+        "colab_type": "text"
+      },
+      "source": [
+        "Q20. What will be the output of the following snippet?\n",
+        "```\n",
+        "l = [1,2,3,4]\n",
+        "l = list(map(lambda x: 2*x,l))\n",
+        "print(l)\n",
+        "```\n",
+        "1. 10\n",
+        "2. the snippet will cause a runtime error\n",
+        "3. 1 2 3 4\n",
+        "4. **2 4 6 8**"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "T2kqQ-rqL1e7",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "e7bea931-a741-4c3b-f3c5-9acd8c4c0d8b"
+      },
+      "source": [
+        "l = [1,2,3,4]\n",
+        "l = list(map(lambda x: 2*x,l))\n",
+        "print(l)"
+      ],
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "[2, 4, 6, 8]\n"
           ],
           "name": "stdout"
         }
