--- a/PCAP_Preparation_Summary_Final.ipynb
+++ b/PCAP_Preparation_Summary_Final.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "PCAP_Preparation_Summary_Final.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMHaoVy3bbp7lDKYnvKVkZy",
+      "authorship_tag": "ABX9TyP+z4GEaX5w+I7QTDA2PK2r",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -859,6 +859,258 @@
           "output_type": "stream",
           "text": [
             "[2, 4, 6, 8]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "46ho5JcAMAWS",
+        "colab_type": "text"
+      },
+      "source": [
+        "Q21. How many stars will the following snippet send to the console?\n",
+        "```\n",
+        "i = 4\n",
+        "while i > 0 :\n",
+        "  i -= 2\n",
+        "  print(“*”)\n",
+        "if i == 2:\n",
+        "  break\n",
+        "else:\n",
+        "  print(“*”)\n",
+        "```\n",
+        "1. 2\n",
+        "2. 0\n",
+        "3. **1**\n",
+        "4. the snippet will enter an infinite loop"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "N4bOiBBjMNOP",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "7a17c0e0-0e41-4782-eee7-02f8ef970ce8"
+      },
+      "source": [
+        "i = 4\n",
+        "while i > 0 :\n",
+        "  i -= 2\n",
+        "  print('*')\n",
+        "  if i == 2:\n",
+        "    break\n",
+        "  else:\n",
+        "    print('*')"
+      ],
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "*\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "yDbYKtnzMdKP",
+        "colab_type": "text"
+      },
+      "source": [
+        "Q22. What will be the output of the following snippet?\n",
+        "```\n",
+        "t = (1, 2, 3, 4)\n",
+        "t = t[-2:-1]\n",
+        "t = t[-1]\n",
+        "print(t)\n",
+        "```\n",
+        "1. 33\n",
+        "2. (3)\n",
+        "3. **3**\n",
+        "4. (3,)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "uhWuqHeJMnK_",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "98a91401-8f94-40fd-9091-2966bf081860"
+      },
+      "source": [
+        "t = (1, 2, 3, 4)\n",
+        "t = t[-2:-1]\n",
+        "t = t[-1]\n",
+        "print(t)"
+      ],
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "3\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "3oxg1p1kMpv_",
+        "colab_type": "text"
+      },
+      "source": [
+        "Q23. What will be the output of the following snippet?\n",
+        "\n",
+        "```\n",
+        "d = {}\n",
+        "d[‘2’] = [1,2]\n",
+        "d[‘1’] = [3,4]\n",
+        "for x in d.keys():\n",
+        "  print(d[x][1],end=””)\n",
+        "```\n",
+        "1. **24**\n",
+        "2. 13\n",
+        "3. 42\n",
+        "4. 31"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Rh4Ax0wbM9PQ",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "f4c1c2b1-cbf7-4588-9514-1761e9d0e98e"
+      },
+      "source": [
+        "d = {}\n",
+        "d['2'] = [1,2]\n",
+        "d['1'] = [3,4]\n",
+        "for x in d.keys():\n",
+        "  print(d[x][1],end='')"
+      ],
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "24"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "dWakjxgBND2x",
+        "colab_type": "text"
+      },
+      "source": [
+        "Q24. What will be the output of the following snippet?\n",
+        "```\n",
+        "def fun(d,k,v):\n",
+        "  d[k]=v\n",
+        "  dc = {}\n",
+        "print(fun(dc,’1′,’v’))\n",
+        "```\n",
+        "1. **None**\n",
+        "2. 1\n",
+        "3. the snippet is erroneous\n",
+        "4. v"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "X1-Dp4mNNSlf",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "721347c6-751b-4e8d-eec9-80e980ebda1c"
+      },
+      "source": [
+        "def fun(d,k,v):\n",
+        "  d[k]=v\n",
+        "dc = {}\n",
+        "print(fun(dc,'1','v'))"
+      ],
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "None\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "pQtjqrjWNZPx",
+        "colab_type": "text"
+      },
+      "source": [
+        "Q25. How many empty lines will the following snippet send to the console?\n",
+        "```\n",
+        "l = [[c for c in range(r)] for r in range(3)]\n",
+        "for x in l:\n",
+        "  if len(x) < 2:\n",
+        "print()\n",
+        "```\n",
+        "1. 1\n",
+        "2. 0\n",
+        "3. **2**\n",
+        "4. 3"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "hZL-e92pNj1o",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 51
+        },
+        "outputId": "1aa02c1e-7aee-4069-a7f2-614bd1358523"
+      },
+      "source": [
+        "l = [[c for c in range(r)] for r in range(3)]\n",
+        "for x in l:\n",
+        "  if len(x) < 2:\n",
+        "    print(x)"
+      ],
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "[]\n",
+            "[0]\n"
           ],
           "name": "stdout"
         }
